<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <include layout="@layout/top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thank_you_msg"
            android:textSize="@dimen/textSizeQuestion"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/procces_soon_msg"
            android:textSize="@dimen/textSizeQuestion"/>
        <Button
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:text="@string/exit_pcmeester"
            android:onClick="exit"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="20dp"
            android:textColor="#ffffff" />


    </LinearLayout>

    <include layout="@layout/bottom_bar" />


</android.support.design.widget.CoordinatorLayout>
