<?xml version="1.1" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    tools:showIn="@layout/sign_in"
    android:background="#1CAFDB"
    android:weightSum="1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@android:color/background_light"
        android:text="@string/contact_question"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_weight="1.07"
        android:layout_gravity="top|start"
        android:layout_marginBottom="5dp"
        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:paddingBottom="5dp"
    android:layout_marginBottom="5dp">
    <LinearLayout
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <ImageView
        android:layout_width="@dimen/contact_image_size"
        android:layout_height="@dimen/contact_image_size"
        android:contentDescription="Call Button"
        android:src="@drawable/phone"
        android:layout_gravity="center|bottom"
        android:longClickable="true"
        android:clickable="true"
        android:onClick="call"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_now"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <ImageView
        android:layout_width="@dimen/contact_image_size"
        android:layout_height="@dimen/contact_image_size"
        android:layout_marginStart="@dimen/contact_image_size"
        android:src="@drawable/email"
        android:clickable="true"
        android:longClickable="true"
        android:onClick="mail"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@android:color/background_light"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


    <ImageView
        android:layout_width="@dimen/contact_image_size"
        android:layout_height="@dimen/contact_image_size"
        android:layout_marginStart="@dimen/contact_image_size"
        android:src="@drawable/message"
        android:clickable="true"
        android:longClickable="true"
        android:onClick="facebook"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <ImageView
        android:layout_width="@dimen/contact_image_size"
        android:layout_height="@dimen/contact_image_size"
        android:layout_marginStart="@dimen/contact_image_size"
        android:src="@drawable/internet"
        android:clickable="true"
        android:longClickable="true"
        android:onClick="internet"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/internet"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@android:color/background_light"
            />
    </LinearLayout>
</LinearLayout>


</LinearLayout>
