<?xml version="1.1" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <include layout="@layout/top_bar" />

    <LinearLayout
        android:layout_gravity="center"
        android:padding="@dimen/paddingAll1st"
        android:layout_marginBottom="@dimen/marginBottom1st"
        android:layout_marginTop="@dimen/marginTop1st"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:id="@+id/tip"
            android:text="@string/question_3"
            android:textSize="@dimen/textSizeQuestion"
            android:layout_marginBottom="@dimen/marginBetweenButtons" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/problem_solved"
            android:id="@+id/question"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/answerTextSize"
            android:layout_marginBottom="@dimen/marginBetweenButtons"/>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:rowCount="2"
            android:columnCount="2"
            android:gravity="center"
            android:layout_gravity="center"
            >


            <Button
                android:layout_margin="@dimen/marginBetweenButtons"
                android:background = "@drawable/rounded_button"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:id="@+id/buttonA"
                android:layout_gravity="center"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:contentDescription="buttonA"
                android:onClick="changeTextA"
                android:clickable="true"
                android:text="@string/yes_button"
                android:textColor="@android:color/white"
                android:textSize="@dimen/buttonText"
                android:layout_row="0"
                android:layout_column="0" />

            <Button
                android:layout_margin="@dimen/marginBetweenButtons"
                android:background = "@drawable/rounded_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:id="@+id/buttonB"
            android:layout_gravity="center"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:contentDescription="buttonB"
            android:onClick="changeTextB"
            android:text="@string/contact_support"
            android:textColor="@android:color/white"
            android:textSize="@dimen/buttonText"
                android:layout_row="0"
                android:layout_column="1" />

        </GridLayout>

</LinearLayout>


    <include layout="@layout/bottom_bar" />


</android.support.design.widget.CoordinatorLayout>
