<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".ActivityActivity3">
    <include layout="@layout/top_bar" />

    <LinearLayout
        android:layout_gravity="center"
        android:padding="20dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:textAlignment="center"
                android:id="@+id/greet"
                android:text="@string/greet"
                android:textSize="15sp"
                 />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:id="@+id/question"
            android:text="@string/question_3"
            android:textSize="25sp"
            android:layout_marginBottom="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
        <ImageButton
            android:background = "@drawable/rounded_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:id="@+id/buttonA"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/computer_scherm_aan"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:contentDescription="buttonA"

            android:onClick="changeTextA"
            android:clickable="true" />
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:id="@+id/answerA"
            android:text="TEST"

            android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                android:padding="10dp">

        <ImageButton
            android:background = "@drawable/rounded_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:id="@+id/buttonB"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/notebook_scherm_aan"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:contentDescription="buttonB"
            android:layout_marginTop="15dp"
            android:onClick="changeTextB" />
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:id="@+id/answerB"
            android:text="@string/awnser_b_to_question_3"
            android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

</LinearLayout>


    <include layout="@layout/bottom_bar" />


</android.support.design.widget.CoordinatorLayout>
