<?xml version="1.1" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <include layout="@layout/top_bar" />

    <LinearLayout
        android:layout_gravity="top"
        android:layout_marginTop="@dimen/marginTop1st"
        android:layout_marginBottom="@dimen/marginBottom1st"
        android:padding="@dimen/paddingAll1st"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:id="@+id/question"
            android:text="@string/question_3"
            android:textSize="@dimen/textSizeQuestion"
            android:clickable="false"
            android:layout_marginBottom="@dimen/marginBetweenButtons"
            />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:rowCount="4"
            android:columnCount="2"
            >


                <ImageButton
                    android:background = "@drawable/rounded_button"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:id="@+id/buttonA"
                    android:layout_gravity="center"
                    android:src="@drawable/computer_scherm_aan"
                    android:scaleType="fitCenter"
                    android:contentDescription="buttonA"
                    android:onClick="changeTextA"
                    android:clickable="true"
                    android:padding="@dimen/imageButtonPadding"
                    android:layout_marginBottom="@dimen/buttonToAnswerMargin"/>
                <TextView
                    android:layout_width="@dimen/answerWidth"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:textAlignment="center"
                    android:id="@+id/answerA"
                    android:text="@string/answer_a_to_question_3"
                    android:textSize="@dimen/answerTextSize"
                    android:layout_marginBottom="@dimen/marginBetweenButtons"
                    />



                <ImageButton
                    android:background = "@drawable/rounded_button"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:id="@+id/buttonB"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/notebook_scherm_aan"
                    android:scaleType="fitCenter"
                    android:contentDescription="buttonB"
                    android:clickable="true"
                    android:onClick="changeTextB"
                    android:padding="@dimen/imageButtonPadding"
                    android:layout_marginBottom="@dimen/buttonToAnswerMargin"/>
                <TextView
                    android:layout_width="@dimen/answerWidth"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:textAlignment="center"
                    android:id="@+id/answerB"
                    android:text="@string/awnser_b_to_question_3"
                    android:textSize="@dimen/answerTextSize"
                    android:layout_marginBottom="@dimen/marginBetweenButtons"
                    />




                <ImageButton
                    android:background = "@drawable/rounded_button"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:id="@+id/buttonC"
                    android:layout_gravity="center"
                    android:src="@drawable/notebook_scherm_uit"
                    android:scaleType="fitCenter"
                    android:contentDescription="buttonB"
                    android:clickable="true"
                    android:onClick="changeTextC"
                    android:padding="@dimen/imageButtonPadding"
                    android:layout_marginBottom="@dimen/buttonToAnswerMargin"/>
                <TextView
                    android:layout_width="@dimen/answerWidth"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:textAlignment="center"
                    android:id="@+id/answerC"
                    android:text="@string/awnser_b_to_question_3"
                    android:textSize="@dimen/answerTextSize"
                    android:layout_marginBottom="@dimen/marginBetweenButtons"
                    />

                <ImageButton
                    android:background = "@drawable/rounded_button"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:id="@+id/buttonD"
                    android:layout_gravity="center"
                    android:src="@drawable/notebook_scherm_aan"
                    android:scaleType="fitCenter"
                    android:contentDescription="buttonB"
                    android:clickable="true"
                    android:onClick="changeTextD"
                    android:padding="@dimen/imageButtonPadding"
                    android:layout_marginBottom="@dimen/buttonToAnswerMargin"/>
                <TextView
                    android:layout_width="@dimen/answerWidth"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:textAlignment="center"
                    android:id="@+id/answerD"
                    android:text="@string/awnser_b_to_question_3"
                    android:textSize="@dimen/answerTextSize"
                    android:layout_marginBottom="@dimen/marginBetweenButtons"
                    />
        </GridLayout>
    </ScrollView>
    </LinearLayout>

    <include layout="@layout/bottom_bar" />


</android.support.design.widget.CoordinatorLayout>
